apps/product-api/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: product-api
  labels:
    istio-injection: enabled
