apps/product-api/deployment.yml
#@ load("@ytt:data", "data")
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - name: product-api
        image: #@ data.values.harbor_domain + "/library/product-api:latest"
        ports:
        - containerPort: 80
