apps/product-api/services.yml
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: product-api
spec:
  selector:
    app: product-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
