apps/product-api/ingress.yml
#@ load("@ytt:data", "data")
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-api
  namespace: product-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: #@ data.values.ingress_hostname
    http:
      paths:
      - backend:
          serviceName: product-api
          servicePort: http
        path: /
  tls:
  - hosts:
    - #@ data.values.ingress_hostname
    secretName: product-api-tls
